2021-06-01  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-retry): New feature.
	(w3m-download-queue-mode-map): Bind a key for it.

2021-05-30  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-util.el (w3m--send-to-gui-clipboard): Handle '%' in copied urls.

2021-05-09  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-util.el (w3m--url-get-queries): Handle weird case of '&' embedded
	in query.

2021-05-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	Move w3m-queries-log-file from w3m-util.el to w3m.el

	* w3m-util.el (w3m-queries-log-file): Move it to w3m.el.
	* w3m.el (w3m-queries-log-file): Move it from w3m-util.el.

2021-05-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-util.el (w3m-queries-log-file): Use expand-file-name for variable
	default definition.

2021-05-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m--download-sentinel): Indentation fix.
	(w3m--download--cache-or-queue): Change construction of list, add
	conversion of spaces to %20 in url argument.

2021-05-04  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-select): BUGFIX for regex such as ".*$"

2021-05-04  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download--resolve-ambiguous-basenames)
	(w3m-download--respect-query-basename, w3m--download-create-basename):
	New functions.
	(w3m--download-validate-basename, w3m-download-using-wget): Use them.

2021-05-04  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-util.el (w3m-queries-log-file): Improve defcustom.
	(w3m--url-get-queries): New function.
	(w3m--url-strip-unwanted-queries): Improve name of function. was
	w3m--url-strip-queries.

	* w3m.el (w3m--retrieve-1--handler-function)
	(w3m--goto-url--valid-url): Apply new function name.

2021-04-29  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m--download-progress-percent-display): Begin
	search at point-min.

2021-04-21  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-delete-line): Add prefix arg option to